Changes for v2.5.0
------------------
* Refactoring: tests, experiments and MPA RTC curve backend moved into git submoduls.

since v2.4.3 "Chimera"
----------------------
* Num interface and its implementations: 
  - Major code refactoring and cleanup.
  - Epsilons (for rounding purposes) are no longer included.
  - Code trying to consider the machine epsilon in every operation was removed after a thorough review revealed bugs.
* Functional tests: 
  - Test results now also hold the required epsilons for individual test cases.
* PwAffine Curves and implementations:
  - Refactored code handling discontinuities (used with token bucket arrival curves).
  - No usage of a machine epsilon required anymore.
* Performance improvement for getSourceFlowArrivalCurve in case there is only a single such flow.
* Remove unnecessary cast from Num to Num when bounding backlogs.
* Code cleanups.

v2.4.3 "Chimera" (2018-Aug-03)
------------------------------
* Fixed Bug #31: Computation of infinite output bound due to stability constraint violation.
* Improved shifting of curves (horizontal and vertical).
* SFA tandem analysis: Shortcut in case there is no interference by other flows. 
* Comment cleanups and improvements.

v2.4.2 "Chimera" (2018-Jul-04)
------------------------------
* Tandem Matching Analysis and Arrival Bound added 
* SFA and PbooArrivalBounds:
  - Improved structure, reliability and performance.
  - Single, static SFA tandem analysis for SFA and PBOO ABs. 
* Rational Num implementations gained a getValue function returning a new instance of the Math3 object in their backend.
* Minor Javadocs and comment improvements.

v2.4.1 "Chimera" (2018-May-07)
------------------------------
<<<<<<< HEAD
* Refactoring: tests, experiments and MPA RTC curve backend moved into git submoduls.
* Tests
  - They now correctly consider the configured Curve and Num implementation (GitHub Issue #1).